# piz-rs

./: Cargo.toml  LICENSE.md
src/: crc_reader.rs  read.rs  spec.rs
tests/: smoke.rs
