[package]
name = "piz"
version = "0.4.1"
edition = "2021"
authors = ["Matt Kline <matt@bitbashing.io>"]
license = "Zlib"
repository = "https://github.com/mrkline/piz-rs"
readme = "README.md"
documentation = "https://docs.rs/piz"
description = """
piz (a Parallel Implementation of Zip)
is a ZIP archive reader designed to concurrently decompress files
using a simple API.
"""
keywords = ["zip", "archive", "parallel", "thread", "concurrency"]
categories = ["compression", "concurrency"]

[dependencies]
codepage-437 = "0.1"
crc32fast = "1.3"
flate2 = { version = "1.0", features = [
    "zlib-ng-compat",
], default-features = false }
log = "0.4"
thiserror = "1.0"
twoway = "0.2"
chrono = "0.4"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.9"
rayon = "1.5"
memmap = "0.7"
stderrlog = "0.5.1"
structopt = "0.3"

[features]
default = ["check-local-metadata"]
check-local-metadata = []
